# rules_pythonic

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  pyproject.toml
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh
_derisk/exp1_wheel_build/: run_experiment.sh
_derisk/exp1_wheel_build/pkg/: pyproject.toml
_derisk/exp1_wheel_build/pkg/src/mypkg/: __init__.py
_derisk/exp1_wheel_build/sandbox/pkg/: VERSION  pyproject.toml
_derisk/exp1_wheel_build/sandbox/pkg/src/mypkg/: __init__.py
_derisk/exp1_wheel_build/sandbox_v3/repo_root/: VERSION
_derisk/exp2_firstparty/: pyproject_edge_cases.toml  pyproject_good.toml  pyproject_missing.toml  run_experiment.sh
_derisk/exp3_platform_wheels/: run_experiment.sh
_derisk/exp4_pythonpath_scaling/: test_pythonpath_scaling.py
_derisk/exp5_conftest_discovery/: test_conftest_discovery.py
_derisk/exp6_editable_distinfo/: test_editable_distinfo.py
_derisk/exp7_tomllib_compat/: test_tomllib_compat.py
_derisk/exp8_extras_groups/: test_extras_groups.py
_derisk/install_test/: install_venv.py  pyproject.toml  test_compiler.py
_derisk/pattern1_single_product/: FINDINGS.md  pyproject.toml  requirements-all.txt  requirements-api.txt  requirements-cli.txt  requirements-core.txt  requirements-darwin.txt  validate.sh
_derisk/pattern2_platform_variants/: FINDINGS.md  pyproject.toml  requirements-a-test.txt  requirements-b-test.txt  requirements-base.txt  requirements-variant-a-linux.txt  requirements-variant-a-test.txt  requirements-variant-a.txt  requirements-variant-b-linux.txt  requirements-variant-b-test.txt  requirements-variant-b.txt  validate.sh
_derisk/pattern2b_additive_extras/: pyproject.toml  requirements-all.txt  requirements-base.txt  requirements-gpu-test.txt  requirements-gpu.txt  requirements-test.txt  validate.sh
_derisk/pattern3_test_deps/: FINDINGS.md  pyproject.toml  requirements-core-only.txt  requirements-everything.txt  requirements-group-test.txt  requirements-no-dev.txt  requirements.txt  validate.sh
_derisk/pattern3_test_deps/integration-tests/: pyproject.toml
_derisk/pattern3_test_deps/integration-tests/tests/: test_integration.py
_derisk/pattern3_test_deps/load-tests/: pyproject.toml
_derisk/pattern3_test_deps/load-tests/tests/: test_load.py
_derisk/pattern4_incompatible/: FINDINGS.md  validate.sh
_derisk/pattern4_incompatible/legacy/: pyproject.toml  requirements.txt
_derisk/pattern4_incompatible/main/: pyproject.toml  requirements.txt
_derisk/pattern4_incompatible/shared/core/: pyproject.toml
_derisk/pattern4_incompatible/shared/core/src/core/: __init__.py
_derisk/pattern5_combined/: FINDINGS.md  validate.sh
_derisk/pattern5_combined/legacy/: pyproject.toml  requirements-cuda11.txt  requirements-linux-cuda11.txt
_derisk/pattern5_combined/main/: pyproject.toml  requirements-cpu.txt  requirements-cuda12.txt  requirements-darwin.txt  requirements-linux-cuda12.txt
archive/: LINUX_CUDA_BENCHMARK.md  bench_cuda_venv.py  bench_output.txt  experiment_ci_simulation.py  experiment_hardlinks.py  experiment_uv_cache_location.py  multi-project-patterns.md  python-in-bazel-design.md  results.json  roof_py_files-design.md
docs/: DESIGN.md  TECHNICAL_REFERENCE.md
e2e/benchmark/: BUILD  MODULE.bazel  pyproject.toml  requirements.txt
e2e/benchmark/tests/: test_model.py
e2e/pytorch/: BUILD  MODULE.bazel  pyproject.toml  requirements_linux_aarch64.txt  requirements_linux_x86_64.txt  requirements_macos_arm64.txt
e2e/pytorch/model/: BUILD.bazel  pyproject.toml
e2e/pytorch/model/src/model/: __init__.py
e2e/pytorch/model/tests/: test_export.py
e2e/smoke/: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  requirements.txt
e2e/smoke/assembled_pkg/: BUILD.bazel  pyproject.toml
e2e/smoke/chain/: BUILD.bazel
e2e/smoke/chain/pkg_a/: pyproject.toml
e2e/smoke/chain/pkg_a/src/pkg_a/: __init__.py
e2e/smoke/chain/pkg_a/tests/: test_chain.py
e2e/smoke/chain/pkg_b/: pyproject.toml
e2e/smoke/chain/pkg_b/src/pkg_b/: __init__.py
e2e/smoke/chain/pkg_c/: pyproject.toml
e2e/smoke/chain/pkg_c/src/pkg_c/: __init__.py
e2e/smoke/conftest/: BUILD.bazel  pyproject.toml
e2e/smoke/conftest/tests/: BUILD.bazel  conftest.py
e2e/smoke/conftest/tests/sub/: BUILD.bazel  conftest.py  test_conftest.py
e2e/smoke/extras/: BUILD.bazel  pyproject.toml
e2e/smoke/extras/src/extras_pkg/: __init__.py
e2e/smoke/extras/tests/: test_extras.py  test_no_extras.py
e2e/smoke/minimal/: BUILD.bazel  pyproject.toml
e2e/smoke/minimal/src/minimal/: __init__.py
e2e/smoke/minimal/tests/: test_filtered_install.py  test_install_all.py
e2e/smoke/mypackage/: BUILD.bazel  pyproject.toml
e2e/smoke/mypackage/helpers/testlib/: __init__.py
e2e/smoke/mypackage/src/mypackage/: __init__.py  greeting.py
e2e/smoke/mypackage/tests/: test_greeting.py  test_wheel_install.py  test_with_helpers.py
pythonic/: BUILD.bazel  defs.bzl  extensions.bzl
pythonic/private/: BUILD.bazel  binary.bzl  build_wheel.py  common.bzl  devenv.bzl  files.bzl  install_packages.py  package.bzl  providers.bzl  pythonic_devenv.tmpl.sh  pythonic_pytest_runner.py  pythonic_run.tmpl.sh  setup_devenv.py  staging.py  test.bzl
pythonic/private/tests/: test_install_packages.py  test_setup_devenv.py  test_staging.py
pythonic/tests/: BUILD.bazel  common_tests.bzl
