load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//pythonic/private:binary",
        "//pythonic/private:files",
        "//pythonic/private:package",
        "//pythonic/private:providers",
        "//pythonic/private:test",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
)
