"Benchmark: rules_pythonic vs rules_py on the same torch test."

module(name = "benchmark")

bazel_dep(name = "rules_pythonic", version = "0.0.0")
bazel_dep(name = "aspect_rules_py", version = "1.10.0")
bazel_dep(name = "rules_python", version = "1.9.0")

local_path_override(
    module_name = "rules_pythonic",
    path = "../..",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
