load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "build_wheel.py",
        "install_packages.py",
        "pythonic_pytest_runner.py",
        "pythonic_run.tmpl.sh",
        "setup_devenv.py",
        "staging.py",
        "pythonic_devenv.tmpl.sh",
    ],
    visibility = ["//pythonic:__subpackages__"],
)

# Public because consumers reference this from their MODULE.bazel
# to set up the multitool hub for the uv binary.
exports_files(
    ["uv.lock.json"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//pythonic:__subpackages__"],
)

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = ["//pythonic:__subpackages__"],
    deps = [":providers"],
)

bzl_library(
    name = "package",
    srcs = ["package.bzl"],
    visibility = ["//pythonic:__subpackages__"],
    deps = [":providers"],
)

bzl_library(
    name = "binary",
    srcs = ["binary.bzl"],
    visibility = ["//pythonic:__subpackages__"],
    deps = [
        ":common",
        ":providers",
    ],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    visibility = ["//pythonic:__subpackages__"],
    deps = [
        ":common",
        ":providers",
    ],
)

bzl_library(
    name = "devenv",
    srcs = ["devenv.bzl"],
    visibility = ["//pythonic:__subpackages__"],
    deps = [
        ":common",
        ":providers",
    ],
)

bzl_library(
    name = "files",
    srcs = ["files.bzl"],
    visibility = ["//pythonic:__subpackages__"],
    deps = [":providers"],
)
