# FINDING: A bare [dependency-groups] without [project] does NOT work as a
# uv workspace member. uv requires a [project] table for all workspace members.
# Error: "No `project` table found in: .../load-tests/pyproject.toml"
#
# Workaround: Add a minimal [project] stub and use [dependency-groups] alongside it.

[project]
name = "load-tests"
version = "0.0.0"
requires-python = ">=3.12"

[dependency-groups]
test = ["locust"]
