load("@rules_pythonic//pythonic:defs.bzl", "pythonic_package", "pythonic_test")

pythonic_package(
    name = "model",
    srcs = glob(["src/**/*.py"]),
    pyproject = "pyproject.toml",
    src_root = "src",
    visibility = ["//:__pkg__"],
)

pythonic_test(
    name = "test_export",
    srcs = ["tests/test_export.py"],
    deps = [":model"],
)
