load("@rules_pythonic//pythonic:defs.bzl", "pythonic_package", "pythonic_test")

pythonic_package(
    name = "pkg_c",
    srcs = glob(["pkg_c/src/**/*.py"]),
    pyproject = "pkg_c/pyproject.toml",
    src_root = "pkg_c/src",
)

pythonic_package(
    name = "pkg_b",
    srcs = glob(["pkg_b/src/**/*.py"]),
    pyproject = "pkg_b/pyproject.toml",
    src_root = "pkg_b/src",
    deps = [":pkg_c"],
)

pythonic_package(
    name = "pkg_a",
    srcs = glob(["pkg_a/src/**/*.py"]),
    pyproject = "pkg_a/pyproject.toml",
    src_root = "pkg_a/src",
    deps = [":pkg_b"],
)

pythonic_test(
    name = "test_chain",
    srcs = ["pkg_a/tests/test_chain.py"],
    deps = [":pkg_a"],
)
