[project]
name = "mypackage"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["six"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mypackage"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.entry-points."mypackage.plugins"]
greeter = "mypackage.greeting:hello"
